src/objects/Reservation_Form__c.object
<CustomObject>
    <description>Price Reservation - Form 4A</description>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issued_and_Outstanding__c</fullName>
        <description>Number of Issued and Outstanding Securities</description>
        <label>Issued and Outstanding</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issuer_Text__c</fullName>
        <label>Issuer Text</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Prices__c</fullName>
        <label>Proposed Price</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>Tier Selection</description>
        <label>Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trading_Ticker__c</fullName>
        <label>Trading_Ticker</label>
        <picklist>
            <picklistValues>
                <fullName>AAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEZS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AHY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AJX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AKG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AKT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALB</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Details__c</fullName>
        <description>Provide details as to the anticipated size and structure of the transaction, if known.</description>
        <label>Transaction Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Reservation Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Reservation Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservation Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>